[package]
name = "eventlogger"
license = "MIT/Apache-2.0"
authors = ["Tim Lucas Sabelmann <tsabelmann>"]
categories = ["command-line-utilities"]
description = "Synchronizes user-data (text) with a specific timestamp (system-time)"
homepage = "https://github.com/tsabelmann/eventlogger-rs"
keywords = ["event", "logging", "synchronization", "timeing"]
repository = "https://github.com/tsabelmann/eventlogger-rs"
readme = "README.md"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.10"}

[[bin]]
name = "eventlogger"
path = "src/main.rs"
doc = false
test = false
bench = false
